--- a/vignettes/TAME-toolkit.Rmd
+++ b/vignettes/TAME-toolkit.Rmd
@@ -211,6 +211,7 @@ natadb_vapor_all[, log_transform := log(V1)]
 natadb_vapor_grouped[, log_transform := log(V1)]
 ```
 
+Now we plot the log transformed data.
 
 ```{r}
 
@@ -236,9 +237,15 @@ all_vapor_grouped <- rbind(ccl4_vapor_grouped, natadb_vapor_grouped)
 vapor_box <- ggplot(all_vapor_grouped, aes(set, log_transform)) + 
   geom_boxplot(aes(color = propType))
 vapor_box
+
+vapor <- ggplot(all_vapor_grouped, aes(log_transform)) +
+  geom_boxplot((aes(color = set)))
+vapor
 ```
 
-We also explore Henry's Law constant and boiling point.
+In the plots above, when we graph the data separated both by data set and property type as well as just by data set, we observe the general trend that the NATADB chemicals have a higher vapor pressure than the CCL4 chemicals.
+
+Next, we also explore Henry's Law constant and boiling point.
 
 ```{r}
 ccl4_hlc_all <- ccl4_phys_chem[propertyId %in% 'henrys-law', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid)]
@@ -253,6 +260,7 @@ summary(ccl4_hlc_grouped)
 summary(natadb_hlc_all)
 summary(natadb_hlc_grouped)
 ```
+
 With such a large range covering several orders of magnitude, we log transform the data. Since these value are positive, we do not have to worry about illegal transformations.
 
 ```{r}
@@ -274,7 +282,15 @@ all_hlc_grouped <- rbind(ccl4_hlc_grouped, natadb_hlc_grouped)
 hlc_box <- ggplot(all_hlc_grouped, aes(set, log_transform)) + 
   geom_boxplot(aes(color = propType))
 hlc_box
+
+hlc <- ggplot(all_hlc_grouped, aes(log_transform)) +
+  geom_boxplot(aes(color = set))
+hlc
 ```
+
+Again, we observe that in both grouping by propType and aggregating all results together by data set, that the chemicals in NATADB have a generally higher Henry's Law Constant value than those in CCL4.
+
+Finally, we consider boiling point.
 
 ```{r}
 ccl4_boiling_all <- ccl4_phys_chem[propertyId %in% 'boiling-point', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid)]
@@ -289,9 +305,10 @@ summary(ccl4_boiling_grouped)
 summary(natadb_boiling_all)
 summary(natadb_boiling_grouped)
 ```
-With such a large range covering several orders of magnitude, we log transform the data. Since these value are positive, we do not have to worry about illegal transformations.
 
-```{r}
+Since some of the boiling point values have negative values, we cannot log transform these values.
+
+```{r, eval = FALSE}
 ccl4_boiling_all[, log_transform := log(V1)]
 ccl4_boiling_grouped[, log_transform := log(V1)]
 
@@ -310,7 +327,15 @@ all_boiling_grouped <- rbind(ccl4_boiling_grouped, natadb_boiling_grouped)
 boiling_box <- ggplot(all_boiling_grouped, aes(set, V1)) + 
   geom_boxplot(aes(color = propType))
 boiling_box
+
+boiling <- ggplot(all_boiling_grouped, aes(V1)) +
+  geom_boxplot(aes(color = set))
+boiling
 ```
+A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL$, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experiemntal and predicted for these two data sets as the previous phys-chem properties we investigated.
+
+
+
 Now, having examined some of the distributions of the phys chem properties of the two lists, aggregated between predicted and experimental, we move towards learning more about these chemicals beyond phys chem properties. Specifically, we will examine their genotoxicity.
 
 To access the genetox endpoint, we will use the function `get_genetox_summary`. Since we have a list of chemicals, rather than searching individually for each chemical, we use the batch search version of the function, names `get_genetox_summary_batch`. We will examine this and then access the details.
