--- a/vignettes/TAME-toolkit.Rmd
+++ b/vignettes/TAME-toolkit.Rmd
@@ -25,8 +25,11 @@ if (!library(ccdR, logical.return = TRUE)){
 }
 ```
 
+# Introduction to Training Module
 
-# Introduction
+This training module provides an overview of the publicly available databases at US EPA that provide physico-chemical, genetoxicity, and hazard data, avenues through which to access the information stored in these databases, and how to use this data. We will first introduce these resources and how one may access them. Then we will focus on one specific method for retrieving data. Through some basic data visualization and analysis, we will explore this data and gain insights both in how to wrangle the data and combine different methods of accessing the data to build automated pipelines for use in more complex settings.
+
+# Introduction to CompTox Chemicals Dashboard
 
 Accessing chemical data and wrangling it is a vital step in many types of workflows related to chemical, biological, and environmental modelling. While there are many resources available from which one can pull data, the [CompTox Chemicals Dashboard](https://comptox.epa.gov/dashboard/)(CCD) built and maintained by the United States Environmental Protection Agency is particularly well-designed and maintained. Originally introduced in [The CompTox Chemistry Dashboard: a community data resource for environmental chemistry](https://jcheminf.biomedcentral.com/articles/10.1186/s13321-017-0247-6), the CCD contains information on over 1.2 million chemicals as of September, 2023. Information contained for chemicals featured in the CCD include but are not limited to phys-chem properties, documentation and curation information of the featured data, hazard and fate/transport data. One can see an example of this in the search for the chemical Bisphenol A. 
 
@@ -42,7 +45,7 @@ One can download the selected information in various formats, such as a excel, c
 
 ## CCTE APIs
 
-Recently, the [Center for Computational Toxicology and Exposure](https://www.epa.gov/aboutepa/about-center-computational-toxicology-and-exposure-ccte)(CCTE) developed APIs that allow users to access the information curated and maintained within the CCD. The [CCTE APIs](https://api-ccte.epa.gov/docs/) are publicly available at no cost to the user. The first step for interacting with the information available through the APIs is acquiring an API key, by contacting the API support team at [ccte_api@epa.gov](ccte_api@epa.gov).
+Recently, the [Center for Computational Toxicology and Exposure](https://www.epa.gov/aboutepa/about-center-computational-toxicology-and-exposure-ccte)(CCTE) developed APIs that allow users to access the information curated and maintained within the CCD. The [CCTE APIs](https://api-ccte.epa.gov/docs/) are publicly available at no cost to the user. The first step for interacting with the information available through the APIs is acquiring an API key, by contacting the API support team at [ccte_api@epa.gov](mailto:ccte_api@epa.gov).
 
 The APIs are organized into three sections of endpoints, `Chemical`, `Hazard`, and `Bioactivity`.Pictured below is what the `Chemical` section looks like and can be found at [CCTE API Chemical Endpoints](https://api-ccte.epa.gov/docs/chemical.html).
 
@@ -189,11 +192,11 @@ Now, we examine the vapor pressures for all the chemicals in each list. We then 
 ```{r}
 library(ggplot2)
 
-ccl4_vapor_all <- ccl4_phys_chem[propertyId %in% 'vapor-pressure', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid)]
-ccl4_vapor_grouped <- ccl4_phys_chem[propertyId %in% 'vapor-pressure', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid, propType)]
+ccl4_vapor_all <- ccl4_phys_chem[propertyId %in% 'vapor-pressure', .(mean_vapor_pressure = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid)]
+ccl4_vapor_grouped <- ccl4_phys_chem[propertyId %in% 'vapor-pressure', .(mean_vapor_pressure = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid, propType)]
 
-natadb_vapor_all <- natadb_phys_chem[propertyId %in% 'vapor-pressure', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid)]
-natadb_vapor_grouped <- natadb_phys_chem[propertyId %in% 'vapor-pressure', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid, propType)]
+natadb_vapor_all <- natadb_phys_chem[propertyId %in% 'vapor-pressure', .(mean_vapor_pressure = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid)]
+natadb_vapor_grouped <- natadb_phys_chem[propertyId %in% 'vapor-pressure', .(mean_vapor_pressure = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid, propType)]
 
 
 summary(ccl4_vapor_all)
@@ -204,25 +207,25 @@ summary(natadb_vapor_grouped)
 With such a large range covering several orders of magnitude, we log transform the data. Since these value are positive, we do not have to worry about illegal transformations.
 
 ```{r}
-ccl4_vapor_all[, log_transform := log(V1)]
-ccl4_vapor_grouped[, log_transform := log(V1)]
+ccl4_vapor_all[, log_transform_mean_vapor_pressure := log(mean_vapor_pressure)]
+ccl4_vapor_grouped[, log_transform_mean_vapor_pressure := log(mean_vapor_pressure)]
 
-natadb_vapor_all[, log_transform := log(V1)]
-natadb_vapor_grouped[, log_transform := log(V1)]
+natadb_vapor_all[, log_transform_mean_vapor_pressure := log(mean_vapor_pressure)]
+natadb_vapor_grouped[, log_transform_mean_vapor_pressure := log(mean_vapor_pressure)]
 ```
 
 Now we plot the log transformed data.
 
 ```{r}
 
-ggplot(ccl4_vapor_all, aes(log_transform)) +
+ggplot(ccl4_vapor_all, aes(log_transform_mean_vapor_pressure)) +
   geom_boxplot()
-ggplot(ccl4_vapor_grouped, aes(propType, log_transform)) +
+ggplot(ccl4_vapor_grouped, aes(propType, log_transform_mean_vapor_pressure)) +
   geom_boxplot()
 
-ggplot(natadb_vapor_all, aes(log_transform)) +
+ggplot(natadb_vapor_all, aes(log_transform_mean_vapor_pressure)) +
   geom_boxplot()
-ggplot(natadb_vapor_grouped, aes(propType, log_transform)) +
+ggplot(natadb_vapor_grouped, aes(propType, log_transform_mean_vapor_pressure)) +
   geom_boxplot()
 ```
 
@@ -234,11 +237,11 @@ natadb_vapor_grouped[, set := 'NATADB']
 
 all_vapor_grouped <- rbind(ccl4_vapor_grouped, natadb_vapor_grouped)
 
-vapor_box <- ggplot(all_vapor_grouped, aes(set, log_transform)) + 
+vapor_box <- ggplot(all_vapor_grouped, aes(set, log_transform_mean_vapor_pressure)) + 
   geom_boxplot(aes(color = propType))
 vapor_box
 
-vapor <- ggplot(all_vapor_grouped, aes(log_transform)) +
+vapor <- ggplot(all_vapor_grouped, aes(log_transform_mean_vapor_pressure)) +
   geom_boxplot((aes(color = set)))
 vapor
 ```
@@ -248,11 +251,11 @@ In the plots above, when we graph the data separated both by data set and proper
 Next, we also explore Henry's Law constant and boiling point.
 
 ```{r}
-ccl4_hlc_all <- ccl4_phys_chem[propertyId %in% 'henrys-law', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid)]
-ccl4_hlc_grouped <- ccl4_phys_chem[propertyId %in% 'henrys-law', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid, propType)]
+ccl4_hlc_all <- ccl4_phys_chem[propertyId %in% 'henrys-law', .(mean_hlc = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid)]
+ccl4_hlc_grouped <- ccl4_phys_chem[propertyId %in% 'henrys-law', .(mean_hlc = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid, propType)]
 
-natadb_hlc_all <- natadb_phys_chem[propertyId %in% 'henrys-law', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid)]
-natadb_hlc_grouped <- natadb_phys_chem[propertyId %in% 'henrys-law', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid, propType)]
+natadb_hlc_all <- natadb_phys_chem[propertyId %in% 'henrys-law', .(mean_hlc = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid)]
+natadb_hlc_grouped <- natadb_phys_chem[propertyId %in% 'henrys-law', .(mean_hlc = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid, propType)]
 
 
 summary(ccl4_hlc_all)
@@ -264,11 +267,11 @@ summary(natadb_hlc_grouped)
 With such a large range covering several orders of magnitude, we log transform the data. Since these value are positive, we do not have to worry about illegal transformations.
 
 ```{r}
-ccl4_hlc_all[, log_transform := log(V1)]
-ccl4_hlc_grouped[, log_transform := log(V1)]
+ccl4_hlc_all[, log_transform_mean_hlc := log(mean_hlc)]
+ccl4_hlc_grouped[, log_transform_mean_hlc := log(mean_hlc)]
 
-natadb_hlc_all[, log_transform := log(V1)]
-natadb_hlc_grouped[, log_transform := log(V1)]
+natadb_hlc_all[, log_transform_mean_hlc := log(mean_hlc)]
+natadb_hlc_grouped[, log_transform_mean_hlc := log(mean_hlc)]
 ```
 
 We compare both sets simultaneously. We add in a column to each data.table denoting to which set the rows correspond and then `rbind` the rows together.
@@ -279,11 +282,11 @@ natadb_hlc_grouped[, set := 'NATADB']
 
 all_hlc_grouped <- rbind(ccl4_hlc_grouped, natadb_hlc_grouped)
 
-hlc_box <- ggplot(all_hlc_grouped, aes(set, log_transform)) + 
+hlc_box <- ggplot(all_hlc_grouped, aes(set, log_transform_mean_hlc)) + 
   geom_boxplot(aes(color = propType))
 hlc_box
 
-hlc <- ggplot(all_hlc_grouped, aes(log_transform)) +
+hlc <- ggplot(all_hlc_grouped, aes(log_transform_mean_hlc)) +
   geom_boxplot(aes(color = set))
 hlc
 ```
@@ -293,11 +296,11 @@ Again, we observe that in both grouping by propType and aggregating all results 
 Finally, we consider boiling point.
 
 ```{r}
-ccl4_boiling_all <- ccl4_phys_chem[propertyId %in% 'boiling-point', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid)]
-ccl4_boiling_grouped <- ccl4_phys_chem[propertyId %in% 'boiling-point', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid, propType)]
+ccl4_boiling_all <- ccl4_phys_chem[propertyId %in% 'boiling-point', .(mean_boiling_point = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid)]
+ccl4_boiling_grouped <- ccl4_phys_chem[propertyId %in% 'boiling-point', .(mean_boiling_point = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid, propType)]
 
-natadb_boiling_all <- natadb_phys_chem[propertyId %in% 'boiling-point', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid)]
-natadb_boiling_grouped <- natadb_phys_chem[propertyId %in% 'boiling-point', sapply(.SD, mean), .SDcols = c('value'), by = .(dtxsid, propType)]
+natadb_boiling_all <- natadb_phys_chem[propertyId %in% 'boiling-point', .(mean_boiling_point = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid)]
+natadb_boiling_grouped <- natadb_phys_chem[propertyId %in% 'boiling-point', .(mean_boiling_point = sapply(.SD, mean)), .SDcols = c('value'), by = .(dtxsid, propType)]
 
 
 summary(ccl4_boiling_all)
@@ -306,14 +309,14 @@ summary(natadb_boiling_all)
 summary(natadb_boiling_grouped)
 ```
 
-Since some of the boiling point values have negative values, we cannot log transform these values.
+Since some of the boiling point values have negative values, we cannot log transform these values. IF we try, as you will see below, there will be warnings of NaNs produced.
 
 ```{r, eval = FALSE}
-ccl4_boiling_all[, log_transform := log(V1)]
-ccl4_boiling_grouped[, log_transform := log(V1)]
+ccl4_boiling_all[, log_transform := log(mean_boiling_point)]
+ccl4_boiling_grouped[, log_transform := log(mean_boiling_point)]
 
-natadb_boiling_all[, log_transform := log(V1)]
-natadb_boiling_grouped[, log_transform := log(V1)]
+natadb_boiling_all[, log_transform := log(mean_boiling_point)]
+natadb_boiling_grouped[, log_transform := log(mean_boiling_point)]
 ```
 
 We compare both sets simultaneously. We add in a column to each data.table denoting to which set the rows correspond and then `rbind` the rows together.
@@ -324,21 +327,32 @@ natadb_boiling_grouped[, set := 'NATADB']
 
 all_boiling_grouped <- rbind(ccl4_boiling_grouped, natadb_boiling_grouped)
 
-boiling_box <- ggplot(all_boiling_grouped, aes(set, V1)) + 
+boiling_box <- ggplot(all_boiling_grouped, aes(set, mean_boiling_point)) + 
   geom_boxplot(aes(color = propType))
 boiling_box
 
-boiling <- ggplot(all_boiling_grouped, aes(V1)) +
+boiling <- ggplot(all_boiling_grouped, aes(mean_boiling_point)) +
   geom_boxplot(aes(color = set))
 boiling
 ```
-A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL$, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experiemntal and predicted for these two data sets as the previous phys-chem properties we investigated.
+A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL$, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experimental and predicted for these two data sets as the previous phys-chem properties we investigated.
+
+# Genotoxicity
+
+Now, having examined some of the distributions of the phys chem properties of the two lists, aggregated between predicted and experimental, we move towards learning more about these chemicals beyond phys-chem properties. Specifically, we will examine their genotoxicity.
+
+Using the standard CompTox Chemicals Dashboard approach to access genotoxicity, one would again navigate to the individual chemical page 
+
+![CompTox Chemicals Dashboard Genotoxicity](./Pictures/BPA Hazard data - Genotoxicity.png){width=120%}
 
 
+Once one navigates to the genotoxicity tab highlighted in the previous page, the following is displayed.
 
-Now, having examined some of the distributions of the phys chem properties of the two lists, aggregated between predicted and experimental, we move towards learning more about these chemicals beyond phys chem properties. Specifically, we will examine their genotoxicity.
+![CompTox Chemicals Dashboard BPA Genotoxicity](./Pictures/CCD BPA genotoxicity.png){width=120%}
 
-To access the genetox endpoint, we will use the function `get_genetox_summary`. Since we have a list of chemicals, rather than searching individually for each chemical, we use the batch search version of the function, names `get_genetox_summary_batch`. We will examine this and then access the details.
+This page includes two sets of information, the first of which provides a summary of available genotoxicity data while the second provides the individual reports and samples of such data.
+
+We again use the CCTE APIs to streamline the process of retrieving this information in a programmatic fashion. To this end, we will use the genotoxicity endpoints. To access the genetox endpoint, we will use the function `get_genetox_summary`. Since we have a list of chemicals, rather than searching individually for each chemical, we use the batch search version of the function, named `get_genetox_summary_batch`. We will examine this and then access the details.
 
 ```{r}
 ccl4_genotox <- get_genetox_summary_batch(DTXSID = ccl4$dtxsid)
@@ -346,6 +360,9 @@ natadb_genetox <- get_genetox_summary_batch(DTXSID = natadb$dtxsid)
 ccl4_genotox
 natadb_genetox
 ```
+
+The information returned is of the first variety highlighted in the figure `CompTox Chemicals Dashboard Genotoxicity`, that is, summary data on the available genotoxicity data for each chemical.
+
 Observe that we have information on 71 chemicals from the `ccl4` data and 153 from the `natadb` data. We note the chemicals not included in the results and then dig into the returned results.
 
 ```{r}
