--- a/vignettes/TAME-toolkit.Rmd
+++ b/vignettes/TAME-toolkit.Rmd
@@ -27,7 +27,7 @@ if (!library(ccdR, logical.return = TRUE)){
 
 # Introduction to Training Module
 
-This training module provides an overview of the publicly available databases at US EPA that provide physico-chemical, genetoxicity, and hazard data, avenues through which to access the information stored in these databases, and how to use this data. We will first introduce these resources and how one may access them. Then we will focus on one specific method for retrieving data. Through some basic data visualization and analysis, we will explore this data and gain insights both in how to wrangle the data and combine different methods of accessing the data to build automated pipelines for use in more complex settings.
+This training module provides an overview of the publicly available databases at US EPA that provide physico-chemical, hazard, and bio-activity data, avenues through which to access the information stored in these databases, and how to use this data. We will first introduce these resources and how one may access them. Then we will focus on one specific method for retrieving data. Through some basic data visualization and analysis, we will explore this data and gain insights both in how to wrangle the data and combine different methods of accessing the data to build automated pipelines for use in more complex settings.
 
 # Introduction to CompTox Chemicals Dashboard
 
@@ -103,7 +103,7 @@ Now, we demonstrate how to retrieve the information for BPA given by the `Chemic
 
 ```{r}
 BPA_chemical_detail <- get_chemical_details(DTXSID = 'DTXSID7020182')
-BPA_chemical_detail
+dim(BPA_chemical_detail)
 class(BPA_chemical_detail)
 names(BPA_chemical_detail)
 ```
@@ -146,8 +146,11 @@ ccl4 <- data.table::as.data.table(ccl4)
 natadb <- get_chemicals_in_list('NATADB')
 natadb <- data.table::as.data.table(natadb)
 
-head(ccl4)
-head(natadb)
+dim(ccl4)
+dim(natadb)
+
+colnames(ccl4)
+head(ccl4, 1)
 ```
 We now collect the phys-chem properties of the chemicals in each list. We will use the batch forms of the function `get_chem_info()`, to which we supply a list of DTXSIDs.
 
@@ -177,7 +180,7 @@ ccl4_phys_chem[propertyId == 'melting-point', .(Mean = mean(value)), by = .(prop
 First we look at all the phys-chem properties individually, then group them by each property (`boiling-point`, `melting-point`, etc...) and then additional group those by property type (`experimental` vs `predicted`). In the grouping, we look at the columns `value`, `unit`, `propertyID` and `propType`. We also demonstrate how take the mean of the values for each grouping.
 
 ```{r}
-ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], ]
+head(ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], ])
 ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], .(propType, value, unit), by = .(propertyId)]
 ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], .(value, unit), by = .(propertyId, propType)]
 
@@ -337,7 +340,7 @@ boiling
 ```
 A visual inspection of this set of graphs is not as clear as in the previous cases. Note that the predicted values for each data set tend to be higher than the experimental. The mean of CCL$, by predicted and experimental appears to be greater than the corresponding means for NATADB, as does the overall mean, but the interquartile ranges of these different groupings yield slightly different results. This gives us a sense that the picture for boiling point is not as clear cut between experimental and predicted for these two data sets as the previous phys-chem properties we investigated.
 
-# Genotoxicity
+# Hazard data: Genotoxicity
 
 Now, having examined some of the distributions of the phys chem properties of the two lists, aggregated between predicted and experimental, we move towards learning more about these chemicals beyond phys-chem properties. Specifically, we will examine their genotoxicity.
 
@@ -352,13 +355,24 @@ Once one navigates to the genotoxicity tab highlighted in the previous page, the
 
 This page includes two sets of information, the first of which provides a summary of available genotoxicity data while the second provides the individual reports and samples of such data.
 
-We again use the CCTE APIs to streamline the process of retrieving this information in a programmatic fashion. To this end, we will use the genotoxicity endpoints. To access the genetox endpoint, we will use the function `get_genetox_summary`. Since we have a list of chemicals, rather than searching individually for each chemical, we use the batch search version of the function, named `get_genetox_summary_batch`. We will examine this and then access the details.
+We again use the CCTE APIs to streamline the process of retrieving this information in a programmatic fashion. To this end, we will use the genotoxicity endpoints found within the hazard endpoints of the CCTE APIs. Pictured below is the particular set of genotoxicity resources available in the hazard endpoints of the CCTE APIs.
+
+![CCTE APIs Hazard endpoint gentoxocity resources](./Pictures/Hazard - genotoxicity resource.png){width=120%}
+
+There are both summary and detail resources, reflecting the information one can find on the CompTox Chemicals Dashboard Genotoxicity page for a given chemical.
+
+To access the genetox endpoint, we will use the function `get_genetox_summary`. Since we have a list of chemicals, rather than searching individually for each chemical, we use the batch search version of the function, named `get_genetox_summary_batch`. We will examine this and then access the details.
 
 ```{r}
 ccl4_genotox <- get_genetox_summary_batch(DTXSID = ccl4$dtxsid)
 natadb_genetox <- get_genetox_summary_batch(DTXSID = natadb$dtxsid)
-ccl4_genotox
-natadb_genetox
+
+
+dim(ccl4_genotox)
+dim(natadb_genetox)
+
+colnames(ccl4_genotox)
+head(ccl4_genotox)
 ```
 
 The information returned is of the first variety highlighted in the figure `CompTox Chemicals Dashboard Genotoxicity`, that is, summary data on the available genotoxicity data for each chemical.
@@ -366,24 +380,31 @@ The information returned is of the first variety highlighted in the figure `Comp
 Observe that we have information on 71 chemicals from the `ccl4` data and 153 from the `natadb` data. We note the chemicals not included in the results and then dig into the returned results.
 
 ```{r}
-ccl4[!(dtxsid %in% ccl4_genotox$dtxsid), ]
-natadb[!(dtxsid %in% natadb_genetox$dtxsid), ]
+ccl4[!(dtxsid %in% ccl4_genotox$dtxsid), .(dtxsid, casrn, preferredName, molFormula)]
+natadb[!(dtxsid %in% natadb_genetox$dtxsid), .(dtxsid, casrn, preferredName, molFormula)]
 ```
 
-Now, we access the genetox details of the chemicals in each data set.
+Now, we access the genotoxicity details of the chemicals in each data set using the function `get_genetox_details_batch`.
 
 ```{r}
 ccl4_genetox_details <- get_genetox_details_batch(DTXSID = ccl4$dtxsid)
 natadb_genetox_details <- get_genetox_details_batch(DTXSID = natadb$dtxsid)
-ccl4_genetox_details
-natadb_genetox_details
+dim(ccl4_genetox_details)
+dim(natadb_genetox_details)
+
+colnames(ccl4_genetox_details)
+head(ccl4_genetox_details)
 ```
 
 We examine the information returned for the first chemical in each set of results, which is DTXSID0020153. Notice that the information is identical in each case as this information is chemical specific and not data set specific.
 
 ```{r}
-ccl4_genetox_details[dtxsid %in% 'DTXSID0020153', ]
-natadb_genetox_details[dtxsid %in% 'DTXSID0020153', ]
+dim(ccl4_genetox_details[dtxsid %in% 'DTXSID0020153', ])
+dim(natadb_genetox_details[dtxsid %in% 'DTXSID0020153', ])
+
+head(ccl4_genetox_details[dtxsid %in% 'DTXSID0020153', ])
+
+identical(ccl4_genetox_details[dtxsid %in% 'DTXSID0020153', ], natadb_genetox_details[dtxsid %in% 'DTXSID0020153', ])
 
 ```
 
