--- a/vignettes/TAME-toolkit-clean.Rmd
+++ b/vignettes/TAME-toolkit-clean.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "TAME-toolkit-clean"
+title: "Automating Access to Chemical Data through the Computational Toxicology Dashboard"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{TAME-toolkit-clean}
@@ -20,7 +20,7 @@ knit_print.data.table = function(x, ...) {
   y <- data.table::copy(x)
   y <- y[, lapply(.SD, function(t){
     if (is.character(t)){
-      t <- strtrim(t, 50)
+      t <- strtrim(t, 25)
     }
     return(t)
   })]
@@ -49,13 +49,13 @@ This training module provides an overview of the publicly available databases at
 
 This training module was specifically developed to answer the following questions:
 
-1. What are the propertyId and propType values present in the data? What are the mean values for a specific value of the propertyID when grouped by propType and when ungrouped?
+1. What are the properties and property types present in the data? What are the mean values for a specific property when grouped by property type and when ungrouped?
 
-2. Are there differences between the mean predicted and experimental results for a variety of propertyIds?
+2. Are there differences between the mean predicted and experimental results for a variety of propertyies?
 
 3. What are the unique assays in each data set? What are the different assay categories and how many unique assays for each assay category are there?
 
-4. How many chemicals in each data set have a 'positive', 'negative', and 'equivocal' value for the `assayResult` column?
+4. How many chemicals in each data set have a 'positive', 'negative', and 'equivocal' value for the assay result?
 
 5. How many assays were positive/equivocal/negative for the chemical with DTXSID equal to DTXSID0020153? Which were positive and how many of each were there?
 
@@ -233,7 +233,7 @@ colnames(ccl4_phys_chem)
 ```
 
 
-*Question?* What are the propertyId and propType values present in the data? What are the mean values for a specific value of the propertyID when grouped by propType and when ungrouped? Try using 'boiling-point' and 'melting-point' for propertyId.
+*Question?* What are the properties and property types present in the data? What are the mean values for a specific property when grouped by property type and when ungrouped? Try using 'boiling-point' and 'melting-point' for property.
 
 ```{r}
 ccl4_phys_chem[, unique(propertyId)]
@@ -259,7 +259,7 @@ ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], .(Mean_value = sapply(.SD, mean)), by
 ccl4_phys_chem[dtxsid == ccl4$dtxsid[[1]], .(Mean_value = sapply(.SD, mean)), by = .(propertyId, unit, propType), .SDcols = c("value")][order(propertyId)]
 ```
 
-*Question?* Are there differences between the mean predicted and experimental results for a variety of propertyIds? For instance, examine 'vapor-pressure', 'henrys-law', and 'boiling-point' and plot the means by chemical for these using boxplots. Compare the values by grouping by both data set and propType.
+*Question?* Are there differences between the mean predicted and experimental results for a variety of properties? For instance, examine 'vapor-pressure', 'henrys-law', and 'boiling-point' and plot the means by chemical for these using boxplots. Compare the values by grouping by both data set and propType.
 
 We first examine the vapor pressures for all the chemicals in each list. We then graph these, grouped by `propType` and pooled together in separate plots. For this we will use boxplots.
 
@@ -609,7 +609,7 @@ natadb_genetox_details[assayCategory == 'ND', .N, by = .(assayType)]
 natadb_genetox_details[assayCategory == 'in vivo', .N, by = .(assayType)]
 ```
 
-*Question?* How many chemicals in each data set have a 'positive', 'negative', and 'equivocal' value for the `assayResult` column?
+*Question?* How many chemicals in each data set have a 'positive', 'negative', and 'equivocal' value for the assay result?
 
 To determine this, we group by assayResult and determine the number of unique dtxsids associated.
 
